# mquad

./: .gitignore  Cargo.toml  README.md  bacon.toml  framework_settings.db  shader.frag  test_ui.rs  test_ui2.rs
docs/superpowers/plans/: 2026-06-01-dictionary-import-search-plan.md  2026-06-02-anki-integration.md  2026-06-03-audio-recording.md  2026-06-03-capture-buffer-audio.md  2026-06-03-capture-extension.md  2026-06-03-clipboard-integration.md  2026-06-03-hotkey-manager.md  2026-06-03-pure-audio-hotkey-org.md  2026-06-03-shader-hud-toggle.md  2026-06-04-hotkey-manager-refinement.md
docs/superpowers/specs/: 2026-06-01-dictionary-import-search-design.md  2026-06-02-anki-integration-design.md  2026-06-03-audio-capture-hotkey-org-design.md  2026-06-03-capture-audio-recording-design.md  2026-06-03-capture-buffer-audio-design.md  2026-06-03-capture-extension-design.md  2026-06-03-clipboard-integration-design.md  2026-06-03-global-hotkey-manager-design.md  2026-06-03-shader-hud-toggle-design.md  2026-06-04-node-payload-system-design.md
ray-api/: Cargo.toml
ray-api/src/: lib.rs
ray-applets/audio/: Cargo.toml
ray-applets/audio/src/: lib.rs
ray-applets/capture/: Cargo.toml
ray-applets/capture/src/: lib.rs
ray-applets/cropper/: Cargo.toml
ray-applets/cropper/src/: lib.rs
ray-applets/legacy/: Cargo.toml
ray-applets/legacy/shaders/: alien_core.frag  audio_reactive_warp.frag  bachata_silk.frag  cosmic_singularity.frag  cyber_grid.frag  default.frag  neon_tunnel.frag  new.frag  new_lit.frag  new_test.frag  raymarch_audio.frag  shader_46.frag  spiky_audio.frag  testing_audio.frag
ray-applets/legacy/src/router/: mod.rs
ray-applets/legacy/src/router/search/: mod.rs
ray-applets/legacy/src/router/settings/: mod.rs
ray-applets/shaders/: Cargo.toml
ray-applets/shaders/src/: lib.rs
ray-applets/trimmer/: Cargo.toml
ray-applets/trimmer/src/: lib.rs
ray-applets/yomichan/: Cargo.toml
ray-applets/yomichan/src/: lib.rs
ray-core/: Cargo.toml
ray-core/src/: lib.rs
ray-runner-cli/: Cargo.toml
ray-runner-cli/src/: main.rs
ray-runner-macroquad/: Cargo.toml
ray-runner-macroquad/src/: main.rs
shaders/: audio_city.frag  audio_test_fullscreen.frag  digital_echoes.frag  modern_audio_test.frag  pure_audio_fractal.frag  reactive_circle.frag  shader_50.frag  shader_83.frag  spiky_audio.vert  test_audio_bars.frag
src/: main.rs  tracing_utils.rs
src/router/: mod.rs
src/router/anki/: db.rs  ui.rs
src/router/audio/: mod.rs
src/router/import/: mod.rs
src/router/search/: mod.rs
src/router/threed/: mod.rs
