[workspace]
members = [
    "ray-api",
    "ray-core",
    "ray-runner-macroquad",
    "ray-runner-cli",
    "ray-applets/*",
]
resolver = "2"

[workspace.dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
clap = { version = "4.0", features = ["derive"] }
