[workspace]
members = [
    "ray-api",
    "ray-core",
    "ray-runner-macroquad",
    "ray-runner-cli",
    "ray-applets/*",
]
resolver = "2"

[workspace.dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
clap = { version = "4.0", features = ["derive"] }
microfft = "0.5"
rusqlite = { version = "0.33", features = ["bundled"] }
arboard = "3.4"
indexmap = "2.2"
yomichan_rs = { path = "../yomichan/yomichan_rs_workspace/yomichan_rs", features = ["anki", "rayon"] }
rfd = "0.14"
xcap = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-core = "0.1"
