[workspace]
members = [
    "ray-api",
    "ray-core",
    "ray-runner-macroquad",
    "ray-runner-cli",
    "ray-applets/*",
]
resolver = "2"

[workspace.dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
clap = { version = "4.0", features = ["derive"] }
microfft = "0.5"
rusqlite = { version = "0.33", features = ["bundled"] }
arboard = "3.4"
rfd = "0.14"
xcap = "0.9"
