[package]
name = "ray-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ray-api = { path = "../ray-api" }
macroquad = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
