[package]
name = "ray-runner-macroquad"
version = "0.1.0"
edition = "2021"

[dependencies]
ray-api = { path = "../ray-api" }
ray-core = { path = "../ray-core" }
ray-applet-yomichan = { path = "../ray-applets/yomichan" }
ray-applet-shaders = { path = "../ray-applets/shaders" }
ray-applet-audio = { path = "../ray-applets/audio" }
macroquad = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
