[package]
name = "ray-applet-shaders"
version = "0.1.0"
edition = "2021"

[dependencies]
ray-api = { path = "../../ray-api" }
macroquad = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tracing = "0.1"
rfd.workspace = true
notify = "8.2.0"
